--- a/index.html
+++ b/index.html
@@ -42,28 +42,30 @@
         </center>
     </main>
 
-    <footer>
-        <div class="rodapeInfo">
-            <a href="">
-                <span>Imagens</span>
-            </a>
-            <span> | </span>
-            <a href="equipe.html">
-                <span>Equipe</span>
-            </a>
-            <span> | </span>
-            <a href="index.html">
-                <span>Início</span>
-            </a>
-        </div>
-        <div class="logoRodape">
-            <a href="dedicatoria.html">
-                <img src="img/logobranca.png" alt="logo">
-            </a>
-        </div>
-        <div class="nome">
-            <span class="nome">Feito por Miguel S. Dias</span>
-        </div>
-    </footer>
+    <div class="pos">
+        <footer>
+            <div class="rodapeInfo">
+                <a href="">
+                    <span>Imagens</span>
+                </a>
+                <span> | </span>
+                <a href="equipe.html">
+                    <span>Equipe</span>
+                </a>
+                <span> | </span>
+                <a href="index.html">
+                    <span>Início</span>
+                </a>
+            </div>
+            <div class="logoRodape">
+                <a href="dedicatoria.html">
+                    <img src="img/logobranca.png" alt="logo">
+                </a>
+            </div>
+            <div class="nome">
+                <span class="nome">Feito por Miguel S. Dias</span>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
