--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
             </div>
         </center>
     </main>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    
+    <div class="space-between">
+        <span class="said space"></span>
+    </div>
+    
     <footer>
         <div class="rodapeInfo">
             <a href="">
